# Cloud-Optimizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .smart-scaffold.yml  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST_EPIC_8.4.md  E2E_TEST_SUMMARY.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  qa-process  smart_scaffold_config.json
.github/workflows/: blue-green-deploy.yml  ci.yml  codeql.yml  db-migrate.yml  docker-build.yml  release.yml  smart-scaffold.yml
.smart-scaffold/: compatibility-assessment.json  config.yaml
.smart-scaffold/contexts/: issue-100.json  issue-101.json  issue-102.json  issue-103.json  issue-104.json  issue-105.json  issue-106.json  issue-107.json  issue-108.json  issue-109.json  issue-110.json  issue-111.json  issue-112.json  issue-113.json  issue-114.json  issue-115.json  issue-116.json  issue-117.json  issue-118.json  issue-119.json  issue-120.json  issue-121.json  issue-122.json  issue-123.json  issue-124.json  issue-125.json  issue-126.json  issue-133.json  issue-134.json  issue-140.json  issue-142.json  issue-143.json  issue-147.json  issue-148.json  issue-149.json  issue-150.json  issue-151.json  issue-159.json  issue-160.json  issue-162.json  (+70 more)
alembic/: env.py
alembic/versions/: 20251201_0001_001_create_user_tables.py  20251201_2330_d62d8b44f851_add_trial_tables.py  20251202_0142_8b2566889924_add_aws_accounts_scan_jobs_and_findings_.py  20251202_0726_b4591d8d37bd_add_documents_table.py  20251203_2148_update_aws_accounts_constraints.py  20251203_2217_e578e33478e1_merge_heads.py  20251203_2220_add_password_reset_columns.py
cloudformation/: .project-summary.txt  ARCHITECTURE.md  DEPLOYMENT_VALIDATION.md  ECR_QUICK_START.md  ECR_SETUP_GUIDE.md  QUICKSTART.md  README.md  acm-certificate.yaml  alerting-integration.yaml  blue-green-deployment.yaml  cloud-optimizer-quickstart.yaml  cloud-optimizer-standalone.yaml  cloudwatch-dashboard.yaml  cloudwatch-logs.yaml  cost-monitoring.yaml  deploy.sh  elasticache-redis.yaml  secrets-manager.yaml  xray-tracing.yaml
cloudformation/nested/: acm-certificate.yaml  alb.yaml  ecr.yaml  ecs.yaml  rds.yaml  security-groups.yaml  vpc.yaml
cloudformation/parameters/: trial.json
cloudformation/rds/: rds-postgresql.yaml
config/alerting/: escalation.yaml
data/iam/: policy.json  trust-policy.json
docker/: .env.production.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init-db.sql  init-test-db.sql
docs/: AI_DEVELOPER_GUIDE.md  DOCUMENT_ANALYSIS_QUICKSTART.md  NEXT_SESSION_PROMPT.md  README.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2025-11-29.md  SESSION_HANDOFF_2025-12-05.md  mock_stub_replacement_opportunities.md  mock_stub_usage_inventory.md
docs/01-guides/: QUICKSTART.md  SMART_SCAFFOLD_INTEGRATION.md
docs/02-architecture/: ARCHITECTURE.md  IB_STRATEGIC_DESIGN.md  IMPLEMENTATION_READINESS_MATRIX.md  MARKETING_TECHNICAL_GAP_ANALYSIS.md  MIGRATION.md  PHASED_IMPLEMENTATION_PLAN.md  REQUIREMENTS_OWNERSHIP.md  REQUIREMENTS_V2.md  STRATEGIC_DESIGN_V2.md
docs/03-development/: DEVELOPMENT_STANDARDS.md  EPIC_8.3_IMPLEMENTATION_SUMMARY.md  EPIC_8.4_IMPLEMENTATION_SUMMARY.md
docs/04-operations/: DEPLOYMENT.md  DOCKER_GUIDE.md  RUNBOOKS.md
docs/05-integration/: AWS_INTEGRATION_TESTING.md  IB_SDK_INTEGRATION.md  SMART_SCAFFOLD_INTEGRATION.md
docs/06-reports/: PROJECT_EVALUATION_DEC_2025.md  SESSION_HANDOFF_SDK_INTEGRATION.md
evidence/: ISSUES_135-138_COMPLETION_SUMMARY.md
examples/: security_analysis_example.py
frontend/: ARCHITECTURE.md  DOCUMENT_UPLOAD_IMPLEMENTATION.md  DOCUMENT_UPLOAD_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.tsx  README.md  TESTING_CHECKLIST.md  TRIAL_ARCHITECTURE.md  TRIAL_COMPONENTS_USAGE.md  TRIAL_QUICK_REFERENCE.md  UI_MOCKUP.md  index.html  package-lock.json  package.json  vitest.config.ts
scripts/: build-and-push.sh  cleanup_ib_entities.py  migrate.py  migrate_ss_entities.py  migrate_ss_relationships.py  migrate_ss_to_ib.py  qa_process_v2.py  reset_migration_temp.py  run_parallel_validator.py  security-audit.sh  security-scan.sh
tests/: __init__.py  conftest.py
(+887 files in other folders)
